<resources>
    <string name="app_name">SignUpFormOther</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_input_hint">Please enter your password</string>
    <string name="confirmation_label">Confirm Password:</string>
    <string name="confirmation_hint">Please confirm your password</string>
    <string name="submit">Submit</string>
    <string name="random">Random</string>

</resources>
